Post + Put Đặt chỗ
